# sysmonretracer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sysmonretracer/: run.py  utils.py
src/sysmonretracer/controller/: EvtxController.py  ModelController.py
src/sysmonretracer/models/: Base.py  CreateProcess.py  TerminateProcess.py  base.py  createprocess.py
tests/: test_sample.py
