[tool.poetry]
name = "sysmonretracer"
version = "0.1.0"
description = ""
authors = ["sumeshi <sum3sh1@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sysmonretracer = 'sysmonretracer.run:main'

[tool.poetry.dependencies]
python = "^3.11"
evtx = "^0.8.3"
orjson = "^3.9.10"
pandas = "^2.1.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
